centered navbar, changed font size and fixed about page heading overlapping with navbar

--- a/style/index.css
+++ b/style/index.css
@@ -184,17 +184,9 @@ header nav {
   display: flex;
   margin: 2% auto;
   width: 85%;
-  /* position: fixed;
-  justify-content: space-between;
-  align-items: center;
-  background-color: #ffffff;
-  top: 0;
-  border-bottom: 1px solid #BFBFBF; */
 }
 
 header .logo {
-  /* display: flex;
-  justify-content: space-around; */
   width: 40%;
   margin: 0 5%;
   font-size: 2.5rem;
@@ -397,22 +389,3 @@ nav.social i {
 .right-box p {
   font-size: 2.5rem;
 }
-
-
-/* Responsive Styling */
-
-@media (max-width: 800px) {
-  
-  .heaver nav {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  
-  .links {
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-}
-
